--- a/src/Styles/ComponentsStyles/Navmobile.css
+++ b/src/Styles/ComponentsStyles/Navmobile.css
@@ -18,6 +18,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    padding-left: 0px;
     color: rgba(181, 189, 183, 0.75);
     z-index: 5000;
 }
