--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -67,7 +67,6 @@
 
 .button {
     background-color: transparent;
-    /* Other button styles */
 }
 
 .add-green {
@@ -106,19 +105,15 @@
 
 /* Caroussel */
 
-.caroussel-1{
+.caroussel-1 {
     height: 1000px;
     width: 100%;
     overflow: hidden;
-    position :relative;
-    /* border: 1px solid green; */
+    position: relative;
 
-    
-    /* background-color:#007ACC ; */
-
-    /* padding: 500px 0 500px 0; */
 }
-.caroussel-1 img{
+
+.caroussel-1 img {
     height: 100%;
     width: 100%;
 
@@ -126,14 +121,13 @@
     z-index: 0;
 }
 
-.caroussel-1 .list{
+.caroussel-1 .list {
     position: absolute;
     top: 0;
     width: 80%;
-    /* border: 1px solid rgb(162, 19, 19); */
 
     max-width: 90%;
-    left: 50%; 
+    left: 50%;
     transform: translateX(-50%);
 
     height: 100%;
@@ -144,36 +138,64 @@
 
 
 
-.caroussel-1 .list .item{
+.caroussel-1 .list .item {
 
     position: absolute;
     width: 100%;
 
-    left: 50%; 
+    left: 50%;
     transform: translateX(-50%);
-    /* transform: translateX(-50%); */
 
     display: flex;
-    align-items: center;
 
-    /* border: 1px solid rgb(151, 22, 123); */
     border-radius: 10px;
     height: 60%;
 }
-.caroussel-1 .list .item img{
+
+.item-button {
+    background-color: var(--fg-green);
+    color: var(--bg-white);
+    border: none;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    width: 165px;
+    background-image: linear-gradient(90deg, #24B47E, #50e40c) !important;
+    padding: 3px;
+    border-radius: 50px;
+    color: white;
+    text-align: center;
+}
+
+.item-button>div {
+    width: 100%;
+    background-color: var(--bg-black);
+    border-radius: 50px;
+    padding: 10px 37px;
+    font-size: 14px;
+    font-weight: 800;
+    cursor: pointer;
+}
+
+
+.caroussel-1 .list .item .item-button {
+    position: absolute;
+    margin: 0;
+    top: 72.5%;
+    left: 49.5%;
+    transform: translate(-50%, -50%);
+}
+
+.caroussel-1 .list .item img {
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    /*border-bottom-left-radius: 20px;*/
 
-    /* left: 0; */
-    /* top:50%; */
-    /* transform: translateY(-50%); */
 }
 
 
 
-.caroussel-1 .list .item .content{
+.caroussel-1 .list .item .content {
     width: 35%;
     display: flex;
     flex-direction: column;
@@ -190,19 +212,19 @@
 }
 
 
-.caroussel-1 .list .item .content h2{
+.caroussel-1 .list .item .content h2 {
 
     font-weight: 400;
     font-size: 40px;
 }
 
-.caroussel-1 .list .item .content p{
+.caroussel-1 .list .item .content p {
 
     font-weight: 400;
     font-size: 20px;
 }
 
-.caroussel-1 .list .item .content a{
+.caroussel-1 .list .item .content a {
 
     font-weight: 500;
     font-size: 22px;
@@ -220,7 +242,7 @@
 
 
 
-.caroussel-1 .list .item .content .tag{
+.caroussel-1 .list .item .content .tag {
 
     background-color: #7d5bb7;
     width: fit-content;
@@ -235,342 +257,270 @@
 
 
 
-.caroussel-1 .list .item:nth-child(2) .content{
+.caroussel-1 .list .item:nth-child(2) .content {
     opacity: 1;
     pointer-events: auto;
     transition: opacity 0.5s;
-} 
+}
 
 
-/* .caroussel-1 .list .item:nth-child(n+4){
-    opacity: 0;
-    pointer-events: none;
-} */
 
-.caroussel-1 .list .item:nth-child(2){
+
+.caroussel-1 .list .item:nth-child(1) {
+    transform: translate(-145%) scale(0.8);
+    z-index: 9;
+    opacity: 1;
+}
+
+.caroussel-1 .list .item:nth-child(2) {
     transform: translate(-50%);
     z-index: 10;
     opacity: 1;
 }
-.caroussel-1 .list .item:nth-child(1){
-    transform: translate(-146%) scale(0.8);
-    z-index: 9;
-    opacity: 1;
-}
-.caroussel-1 .list .item:nth-child(3){
+
+
+.caroussel-1 .list .item:nth-child(3) {
     transform: translate(45%) scale(0.8);
     z-index: 9;
     opacity: 1;
 }
 
+.caroussel-1 .list .item:nth-child(4) {
+    transform: translate(120%) scale(0.8);
+    z-index: 9;
+    opacity: 0;
+}
 
-.arrows{
-    /* border: 1px solid black; */
+.arrows {
     position: absolute;
-    /* bottom: 10px; */
-    width: 88%;
-    max-width: 90%;
+    width: 90%;
+    max-width: 100%;
 
     opacity: 0.4;
-    left:6%;
-    /* transform: translateX(-50%); */
+    left: 5%;
     display: flex;
     justify-content: space-between;
 
+    z-index: 9;
     top: 50%;
     transform: translateY(-50%);
     align-items: center;
 }
 
-.arrows #prev, .arrows #next{
+.arrows #prev,
+.arrows #next {
 
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     width: 60px;
     height: 60px;
     border-radius: 50%;
     font-family: monospace;
     font-size: 50px;
-    /* font-weight: bold; */
-    border:1px solid #ffffff;
+
     color: white;
     padding-bottom: 7px;
     background-color: transparent;
 }
-/* 
-.arrows #back{
 
-    font-weight: 500;
-    border: none;
-    border-bottom: 1px solid #555;
-    letter-spacing: 3px;
-    background-color: transparent;
-    opacity: 0;
-    pointer-events: none;
 
-} */
-.caroussel-1.next .list .item:nth-child(4){
+
+
+.caroussel-1.next .list .item:nth-child(1) {
+    animation: positionItemn2 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn2 {
+    from {
+        transform: translate(-50%);
+        z-index: 10;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(2) {
+    animation: positionItemn3 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn3 {
+    from {
+        transform: translate(45%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(3) {
     animation: positionItemn4 0.9s ease-in-out 1 forwards;
 }
 
 @keyframes positionItemn4 {
-    from{
-        transform: translate(146%) scale(0.8);
+    from {
+        transform: translate(120%) scale(0.8);
         z-index: 8;
         opacity: 1;
     }
 }
 
-
-.caroussel-1.next .list .item:nth-child(3){
+.caroussel-1.next .list .item:nth-child(4) {
     animation: positionItemn1 0.9s ease-in-out 1 forwards;
 }
 
 @keyframes positionItemn1 {
-    from{
-        transform: translate(-146%) scale(0.8);
-        z-index: 9;
+    from {
+        transform: translate(-145%) scale(0.8);
+        z-index: 7;
         opacity: 1;
     }
 }
 
 
-.caroussel-1.next .list .item:nth-child(2){
-    animation: positionItemn3 0.9s ease-in-out 1 forwards;
+
+.caroussel-1.prev .list .item:nth-child(2) {
+    animation: positionItem1 0.9s ease-in-out 1 forwards;
 }
 
-@keyframes positionItemn3 {
-    from{
-        transform: translate(45%) scale(0.8);
-        z-index: 10;
+@keyframes positionItem1 {
+    from {
+        transform: translate(-145%) scale(0.8);
+        z-index: 7;
         opacity: 1;
     }
 }
 
-
-.caroussel-1.next .list .item:nth-child(1){
-    animation: positionItemn2 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItemn2 {
-    from{
-        transform: translate(-50%);
-        z-index: 11;
-        opacity: 1;
-    }
-}
-.caroussel-1.prev .list .item:nth-child(2){
+.caroussel-1.prev .list .item:nth-child(3) {
     animation: positionItem2 0.9s ease-in-out 1 forwards;
 }
 
 @keyframes positionItem2 {
-    from{
-        transform: translate(-146%) scale(0.8);
+    from {
+        transform: translate(-50%);
+        z-index: 10;
+        opacity: 1;
+    }
+
+}
+
+.caroussel-1.prev .list .item:nth-child(4) {
+    animation: positionItem3 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem3 {
+    from {
+        transform: translate(45%) scale(0.8);
         z-index: 9;
         opacity: 1;
     }
 }
 
-.caroussel-1.prev .list .item:nth-child(3){
-    animation: positionItem3 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItem3 {
-    from{
-        transform: translate(45%) scale(0.8);
-        z-index: 10;
-        opacity: 1;
-    }
-}
-
-.caroussel-1.prev .list .item:nth-child(4){
+.caroussel-1.prev .list .item:nth-child(1) {
     animation: positionItem4 0.9s ease-in-out 1 forwards;
 }
 
 @keyframes positionItem4 {
-    from{
-        transform: translate(146%) scale(0.8);
-        z-index: 11;
-        opacity: 1;
-    }
-}
-
-.caroussel-1.prev .list .item:nth-child(1){
-    animation: positionItem1 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItem1 {
-    from{
-        transform: translate(-50%);
+    from {
+        transform: translate(120%) scale(0.8);
         z-index: 8;
         opacity: 1;
     }
 }
 
 
-
-
-
-
-
-
-/*
-.caroussel-1.next .list .item:nth-child(3){
-    animation: positionItemn1 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItemn1 {
-    from{
-        transform: translate(-146%) scale(0.8);
-
-        /* transform: translate(45%) scale(0.8);
-        z-index: 9;
-        opacity: 1;
-    }
-}
-
-
-.caroussel-1.next .list .item:nth-child(2){
-    animation: positionItemn3 0.9s ease-in-out 1 forwards;
-}
-@keyframes positionItemn3 {
-    from{
-        /* transform: translate(-146%) scale(0.8); 
-        transform: translate(45%) scale(0.8);
-
-        z-index: 10;
-        opacity: 1;
-    }
-}*/
-
-
-/* 
-.caroussel-1.next .list .item:nth-child(1){
-    animation: positionItemn2 0.9s ease-in-out 1 forwards;
-}
-@keyframes positionItemn2 {
-    from{
-        transform: translate(-50%);
-        z-index: 11;
-        opacity: 1;
-    }
-}
-
-
-
-
-
-
-.caroussel-1.prev .list .item:nth-child(2){
-    animation: positionItem1 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItem2 {
-    from{
-        transform: translate(-50%);
-        z-index: 10;
-        opacity: 1;
-    }
-}
-
-.caroussel-1.prev .list .item:nth-child(3){
-    animation: positionItem2 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItem1 {
-    from{
-        transform: translate(-146%) scale(0.8);
-        z-index: 9;
-        opacity: 1;
-    }
-}
-
-.caroussel-1.prev .list .item:nth-child(1){
-    animation: positionItem3 0.9s ease-in-out 1 forwards;
-}
-
-@keyframes positionItem3 {
-    from{
-        transform: translate(45%) scale(0.8);
-        z-index: 9;
-        opacity: 1;
-    }
-} */
 
 
 
 
 /* below 900px */
 @media only screen and (max-width: 900px) {
-    .home-content {
-        flex-direction: column-reverse;
-        gap: 10%;
-        margin-top: 90px;
+    .caroussel-1 {
+        margin-top: 20%;
+        height: 132vh;
+    }
+
+    .caroussel-1 .list .item .item-button {
+        top: 84.5%;
+    }
+
+    .item-button {
+        background-color: var(--fg-green);
+        color: var(--bg-white);
+        border: none;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+        background-image: linear-gradient(90deg, #24B47E, #50e40c) !important;
+        width: 165px;
+        padding: 3px;
+        border-radius: 50px;
+        color: white;
+        margin-top: 60px;
+        margin-left: 10px;
+        margin-bottom: 90px;
+        text-align: center;
+
+
 
     }
 
-    .home-content>.lottie {
+    .item-button>div {
         width: 100%;
-        height: 100%;
-        margin-top: 90px;
+        background-color: var(--bg-black);
+        border-radius: 50px;
+        padding: 10px 25px;
+        font-size: 14px;
+        font-weight: 800;
+        cursor: pointer;
     }
 
-    .home {
-        padding-top: 200px;
-        margin-top: 100px;
+}
+
+@media screen and (max-width: 768px) {
+    .home.main-section {
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
-    .explore-btn {
-        margin-top: 40px !important;
-        margin-bottom: 80px;
+    .arrows {
+        width: 105%;
+        left: -3%;
+        max-width: none;
     }
 
-    @media screen and (max-width: 768px) {
-        .home.main-section {
-            /* Adjust styles for smaller screens */
-            padding-top: 0;
-            /* Example adjustment */
-            padding-bottom: 0;
-            /* Example adjustment */
-        }
-
-        .legend {
-            /* Adjust styles for smaller screens */
-            max-width: 200px;
-            /* Example adjustment */
-            font-size: 14px;
-            /* Example adjustment */
-            margin-left: 10px;
-            /* Example adjustment */
-        }
-
-        /* Force carousel to display in portrait mode */
-        .carousel .slider-wrapper {
-            width: 100% !important;
-            height: 100vh !important;
-            /* Cover the full viewport height */
-        }
-
-        /* Adjust carousel item to fit portrait mode */
-        .carousel .slider-wrapper .slider {
-            width: 100% !important;
-            height: 100% !important;
-        }
-
-
-        .carousel .slider-wrapper .slider img {
-            height: 100%;
-            width: auto;
-            object-fit: cover;
-        }
-
-        .button {
-
-            padding: 10px 20px;
-        }
+    .caroussel-1 .list .item .item-button {
+        top: 84.5%;
     }
 
+    .item-button {
+        background-color: var(--fg-green);
+        color: var(--bg-white);
+        border: none;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+        background-image: linear-gradient(90deg, #24B47E, #50e40c) !important;
+        width: 165px;
+        padding: 3px;
+        border-radius: 50px;
+        color: white;
+        margin-top: 60px;
+        margin-left: 10px;
+        margin-bottom: 90px;
+        text-align: center;
+
+    }
+
+    .item-button>div {
+        width: 100%;
+        background-color: var(--bg-black);
+        border-radius: 50px;
+        padding: 10px 25px;
+        font-size: 14px;
+        font-weight: 800;
+        cursor: pointer;
+    }
 
 
 }
