--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -1,3 +1,13 @@
+.social-links {
+    width: 100%;
+    line-height: 200px;
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    height: auto;
+    align-items: center;
+}
+
 .navbar {
     width: 300px;
     height: 100vh;
